Streamline README to focus only on setup guide
- Simplified README to contain only setup and installation instructions
- Moved detailed project information to PROJECT_DOCUMENTATION.md
- Added clear prerequisites, installation steps, and troubleshooting
- Included multiple methods for running the application
- Added quick start commands for immediate use
- Updated repository URL to correct GitHub location